# connect-4-solver

./: .gitignore  CMakeLists.txt
include/: Board.h  Minimax.h  Player.h
src/: Board.cpp  Main.cpp  Minimax.cpp  Player.cpp
